erDiagram

    %% =========================
    %% RELACIONES
    %% =========================

    USER ||--o{ TENANT_USER : pertenece_a
    TENANT ||--o{ TENANT_USER : tiene_miembros

    TENANT ||--o{ SUBSCRIPTION : tiene
    TENANT ||--o{ INVITATION : genera

    USER ||--o{ INVITATION : puede_recibir
    PROFILE ||--|| USER : pertenece_a


    %% =========================
    %% TABLAS
    %% =========================

    USER {
        uuid id PK
        string email UK
        string google_sub UK
        bool is_superuser
        datetime created_at
        datetime updated_at
    }
    
    PROFILE {
        uuid id PK
        uuid user_id FK
        string first_name
        string last_name
        string phone_number UK
        string avatar_url
        datetime created_at
        datetime updated_at
    }

    TENANT {
        uuid id PK
        string name
        string slug UK
        string schema_name UK
        bool is_active
        datetime created_at
    }

    TENANT_USER {
        uuid id PK
        uuid user_id FK "unique(user_id, tenant_id)"
        uuid tenant_id FK
        string role "owner, admin, member"
        bool is_active
        datetime created_at
    }

    SUBSCRIPTION {
        uuid id PK
        uuid tenant_id FK
        string plan
        string status
        datetime current_period_end
        datetime created_at
    }

    INVITATION {
        uuid id PK
        uuid tenant_id FK
        string email
        string role
        string token UK
        datetime expires_at
        datetime created_at
    }